--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -14,7 +14,7 @@
     width: 300px;
     background-color: rgb(254, 216, 161);
     border:1px solid rgb(154, 154, 154);
-    box-shadow:  4px 4px 4px 4px;
+    box-shadow:  4px 4px 4px 4px rgb(174, 149, 115);
 }
 body{
     margin-top: 100px;
