--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,3 @@
-
 /* 
 
     You can write your own styles here...
@@ -10,47 +9,54 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
-.container{
-    width: 300px;
-    background-color: rgb(254, 216, 161);
-    border:1px solid rgb(154, 154, 154);
-    box-shadow:  4px 4px 4px 4px rgb(174, 149, 115);
+.container {
+  width: 300px;
+  background-color: rgb(254, 216, 161);
+  border: 1px solid rgb(154, 154, 154);
+  box-shadow: 4px 4px 4px 4px rgb(174, 149, 115);
 }
-body{
-    margin-top: 100px;
+body {
+  margin-top: 100px;
 }
-ul li{
-    border:1px solid gray;
-    list-style: none;
-    padding: 5px;
+ul li {
+  border: 1px solid gray;
+  list-style: none;
+  padding: 5px;
 }
-h1{
-    text-align: center;
+h1 {
+  text-align: center;
 }
-input{
-    border: nobe;
-    width: 100%;
+input {
+  border: nobe;
+  width: 100%;
 }
-ul{
-    padding: 0;
-    margin-bottom: 0;
-}
-
-p{
-    color:rgb(0, 30, 255)
-}
-span{
-    color:red
+ul {
+  padding: 0;
+  margin-bottom: 0;
 }
 
-button{
-    border-radius: 100%;
-    background-color: rgb(255, 255, 255);
-  }
+p {
+  color: rgb(0, 30, 255);
+}
+span {
+  color: red;
+}
+
+#btn1 {
+  border-radius: 100%;
+  background-color: rgb(255, 255, 255);
+}
 
 .list {
-    display: flex;
-    justify-content: space-between;
-    padding: 4px 6px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;   
+  display: flex;
+  justify-content: space-between;
+  padding: 4px 6px;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+.btn2 {
+  border-radius: 30%;
+  background-color: rgb(254, 143, 143);
+  color: red;
+  box-shadow: 2px 2px 2px 2px brown;
+  border-color: brown;
 }
